# mlops-project-1

./: .gitignore  LICENSE  demo.py  mongo_credentials.txt  projecttxt.txt  pyproject.toml  setup.py  template.py
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/components/: data_ingestion.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/logger/: __init__.py
